RE-organizacion de carpetas del proyecto

--- a/templates/plantilla-base.html
+++ b/templates/plantilla-base.html
@@ -18,6 +18,6 @@
     </script>
 
     <!-- Protección básica anti-inspección compartida -->
-    <script src="js/anti-inspection.js"></script>
+    <script src="../assets/js/anti-inspection.js"></script>
 </body>
 </html>
