--- a/templates/plantilla-formulario.html
+++ b/templates/plantilla-formulario.html
@@ -47,6 +47,6 @@
         });
     </script>
 
-    <script src="js/anti-inspection.js"></script>
+    <script src="../assets/js/anti-inspection.js"></script>
 </body>
 </html>
